babbageprod/force-app/main/default/objects/Office_Location__c/Office_Location__c.object-meta.xml
<CustomObject>
    <label>Office Location</label>
    <nameField>
        <label>Office Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>