babbageprod/force-app/main/default/objects/Office_Location__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Street_Address__c + &quot;, &quot; +  City__c + &quot;, &quot; +  State__c + &quot; &quot; + TEXT(Zip_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>